--- a/Projetos/forum/pom.xml
+++ b/Projetos/forum/pom.xml
@@ -23,6 +23,11 @@
 			<scope>runtime</scope>
 		</dependency>
 		
+		<dependency> 
+		    <groupId>org.springframework.boot</groupId> 
+		    <artifactId>spring-boot-starter-validation</artifactId> 
+		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
