--- a/Projetos/forum/pom.xml
+++ b/Projetos/forum/pom.xml
@@ -66,6 +66,11 @@
 			<version>0.9.1</version>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
