--- a/Projetos/forum/src/main/resources/application.properties
+++ b/Projetos/forum/src/main/resources/application.properties
@@ -26,3 +26,6 @@ management.endpoint.health.show-details = always
 management.endpoints.web.exposure.include=*
 info.app.name=@project.name@
 info.app.version=@project.version@
+
+# spring boot admin server
+spring.boot.admin.client.url=http://localhost:8081
