--- a/Projetos/forum/pom.xml
+++ b/Projetos/forum/pom.xml
@@ -72,14 +72,14 @@
 		</dependency>
 		
 		<dependency>
-			<groupId>de.codecentric</groupId>
-			<artifactId>spring-boot-admin-starter-client</artifactId>
-			<version>2.1.4</version>
-		</dependency>
-		
+	        <groupId>io.springfox</groupId>
+	        <artifactId>springfox-boot-starter</artifactId>
+	        <version>3.0.0</version>
+	    </dependency>
+	    
 	</dependencies>
 
-	<build>
+	<build>	
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
