--- a/Projetos/forum/src/main/resources/application.properties
+++ b/Projetos/forum/src/main/resources/application.properties
@@ -29,3 +29,6 @@ info.app.version=@project.version@
 
 # spring boot admin server
 spring.boot.admin.client.url=http://localhost:8081
+
+#Swagger
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
