11/05 - Profiles, Junit tests

--- a/Projetos/forum/pom.xml
+++ b/Projetos/forum/pom.xml
@@ -15,6 +15,7 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
+		<tomcat.version>9.0.62</tomcat.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -38,7 +39,7 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
+				
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
