12/openjdk:8-jdk-alpine - Deploy, war file, deploy with docker, dockerfile, env variables, end of spring roadmap

--- a/Projetos/forum/pom.xml
+++ b/Projetos/forum/pom.xml
@@ -13,6 +13,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>forum</name>
 	<description>Demo project for Spring Boot</description>
+	<!-- <packaging>war</packaging> -->
 	<properties>
 		<java.version>11</java.version>
 		<tomcat.version>9.0.62</tomcat.version>
@@ -78,9 +79,18 @@
 	        <version>3.0.0</version>
 	    </dependency>
 	    
+	    <!-- 
+	    <dependency>
+	    	<groupId>org.springframework.boot</groupId>
+	    	<artifactId>spring-boot-starter-tomcat</artifactId>
+	    	<scope>provided</scope>
+	    </dependency>
+	    -->
+	    
 	</dependencies>
 
 	<build>	
+		<finalName>forum</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
